zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__delete_wide_character_under_cursor.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 941
expression: "format!(\"{:?}\", grid)"
---
00 (C): 12 4
01 (C): 
02 (C): 
03 (C): 
04 (C): 
05 (C): 
06 (C): 
07 (C): 
08 (C): 
09 (C): 
10 (C): 
11 (C): 
12 (C): 
13 (C): 
14 (C): 
15 (C): 
16 (C): 
17 (C): 
18 (C): 
19 (C): 
20 (C): 

