zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__exa_plus_omf_theme.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): .rw-r--r--  3.3k aram 11 Jan 16:09  CODE_OF_CONDUCT.md
01 (C): .rw-r--r--  3.5k aram 17 Feb 16:06  CONTRIBUTING.md
02 (C): drwxr-xr-x     - aram 10 Feb 11:53  default-tiles
03 (C): drwxr-xr-x     - aram 10 Feb 11:53  docs
04 (C): .rw-r--r--  2.1k aram 10 Feb 11:53  GOVERNANCE.md
05 (C): .rw-r--r--  1.1k aram 10 Feb 11:53  LICENSE.md
06 (C): .rw-r--r--  4.7k aram 17 Feb 16:06  README.md
07 (C): drwxr-xr-x     - aram 17 Feb 16:06  src
08 (C): drwxr-xr-x     - aram 17 Feb 16:08  target
09 (C): drwxr-xr-x     - aram 17 Feb 16:06  zellij-tile
10 (C): ⋊> ~/c/zellij on main ⨯ ll                                                                                  10:27:45                                                                                                                       
11 (C): Permissions Size User Date Modified Name
12 (C): drwxr-xr-x     - aram 11 Feb 14:04  assets
13 (C): .rwxr-xr-x   596 aram 17 Feb 16:06  build-all.sh
14 (C): .rw-r--r--  1.4k aram 17 Feb 16:06  build.rs
15 (C): .rw-r--r--   56k aram 17 Feb 16:07  Cargo.lock
16 (C): .rw-r--r--  2.1k aram 17 Feb 16:06  Cargo.toml
17 (C): .rw-r--r--  3.3k aram 11 Jan 16:09  CODE_OF_CONDUCT.md
18 (C): .rw-r--r--  3.5k aram 17 Feb 16:06  CONTRIBUTING.md
19 (C): drwxr-xr-x     - aram 10 Feb 11:53  default-tiles
20 (C): drwxr-xr-x     - aram 10 Feb 11:53  docs
21 (C): .rw-r--r--  2.1k aram 10 Feb 11:53  GOVERNANCE.md
22 (C): .rw-r--r--  1.1k aram 10 Feb 11:53  LICENSE.md
23 (C): .rw-r--r--  4.7k aram 17 Feb 16:06  README.md
24 (C): drwxr-xr-x     - aram 17 Feb 16:06  src
25 (C): drwxr-xr-x     - aram 17 Feb 16:08  target
26 (C): drwxr-xr-x     - aram 17 Feb 16:06  zellij-tile
27 (C): ⋊> ~/c/zellij on main ⨯ omf theme                                                                           10:27:45                                                                                                                       
28 (C): Installed:
29 (C): agnoster        chain           default         plain
30 (C): 
31 (C): Available:
32 (C): agnoster                eden                    lavender                scorphish
33 (C): aight                   emoji-powerline         lolfish                 separation
34 (C): ays                     es                      mars                    shellder
35 (C): batman                  fishbone                mish                    simple-ass-prompt
36 (C): beloglazov              fishface                mokou                   simplevi
37 (C): bira                    fishy-drupal            mtahmed                 slavic-cat
38 (C): bobthefish              fisk                    nai                     spacefish
39 (C): bongnoster              fox                     nelsonjchen             sushi
40 (C): boxfish                 gentoo                  neolambda               syl20bnr
41 (C): budspencer              gianu                   numist                  taktoa
42 (C): cbjohnson               gitstatus               ocean                   technopagan
43 (C): chain                   gnuykeaj                one                     toaster
44 (C): clearance               godfather               pastfish                tomita
45 (C): cmorrell                graystatus              perryh                  trout
46 (C): coffeeandcode           harleen                 plain                   tweetjay
47 (C): cor                     idan                    pure                    uggedal
48 (C): cyan                    integral                pygmalion               will
49 (C): dangerous               jacaetevha              random                  wolf-theme
50 (C): default                 johanson                randomrussel            yimmy
51 (C): dmorrell                kawasaki                redfish                 zeit
52 (C): doughsay                krisleech               red-snapper             zephyr
53 (C): eclm                    l                       robbyrussell            zish
54 (C): edan                    lambda                  sashimi
55 (C): ⋊> ~/c/zellij on main ⨯                                                                                     10:27:46                                                                                                                       

