zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__full_screen_scroll_region_and_scroll_up.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): line5
01 (C): line6
02 (C): line7
03 (C): line8
04 (C): line9
05 (C): line10
06 (C): line11
07 (C): line12
08 (C): line13
09 (C): line14
10 (C): line15
11 (C): line16
12 (C): line17
13 (C): line18
14 (C): line19
15 (C): line20
16 (C): line21
17 (C): line22
18 (C): line23
19 (C): line24
20 (C): line25
21 (C): line26
22 (C): line27
23 (C): line28
24 (C): line29
25 (C): line30
26 (C): line31
27 (C): line32
28 (C): line33
29 (C): line34
30 (C): line35
31 (C): line36
32 (C): line37
33 (C): line38
34 (C): line39
35 (C): line40
36 (C): line41
37 (C): line42
38 (C): line43
39 (C): line44
40 (C): line45
41 (C): line46
42 (C): line47
43 (C): line48
44 (C): line49
45 (C): line50
46 (C): line51
47 (C): line52
48 (C): line53
49 (C): line54                                                                          
50 (C): line55                                                                          
51 (C): line56                                                                          
52 (C): line57                                                                          
53 (C): line58                                                                          

